--- a/src/pages/pokoman/[slug].astro
+++ b/src/pages/pokoman/[slug].astro
@@ -47,7 +47,8 @@ const { Content } = await render();
 
       <div class="menu h-full p-4 bg-base-200 text-base-content">
         <PokomanSearch client:idle />
-        <PokomanList client:idle />
+        <div transition:persist="pokoman-list">
+        <PokomanList loadMax={2} increment={2} client:idle /></div>
       </div>
     </div>
   </div>
