moved images to public directory

--- a/src/layout/pokoman-layout.astro
+++ b/src/layout/pokoman-layout.astro
@@ -13,7 +13,7 @@ const pmoves = getPMoves().filter((pm) => moveset.includes(pm.data.title));
   <div class="flex justify-center mb-8">
     <div class="avatar w-52">
       <img
-        src={`/src/images/${frontmatter.title.toLowerCase()}.svg`}
+        src={`/images/${frontmatter.title.toLowerCase()}.svg`}
         alt={`The Pokoman named ${frontmatter.title}`}
         width={400}
         class="bg-base-200 shadow-xl rounded-full ring ring-primary ring-offset-base-100 ring-offset-2"
